// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFinalCancelOrderPayload() should return final cancel order payload 1`] = `
Immutable.Map {
  "reason": "customer",
  "email": true,
  "refund": Immutable.Map {
    "currency": "USD",
    "transactions": Immutable.List [
      Immutable.Map {
        "order_id": 1894175539223,
        "kind": "refund",
        "gateway": "manual",
        "parent_id": 2521452118039,
        "amount": "1.00",
        "currency": "USD",
        "maximum_refundable": "1.20",
      },
    ],
    "notify": false,
    "refund_line_items": Immutable.List [
      Immutable.Map {
        "line_item_id": 4193100136471,
        "restock_type": "cancel",
        "location_id": 123,
        "quantity": 1,
      },
    ],
    "shipping": Immutable.Map {
      "amount": "0.00",
    },
  },
}
`;

exports[`getFinalRefundOrderPayload() should override \`restock_type\` to \`no_restock\` because \`location_id\` is \`null\` 1`] = `
Immutable.Map {
  "currency": "USD",
  "transactions": Immutable.List [
    Immutable.Map {
      "order_id": 1894175539223,
      "kind": "refund",
      "gateway": "manual",
      "parent_id": 2521452118039,
      "amount": "1.00",
      "currency": "USD",
      "maximum_refundable": "1.20",
    },
  ],
  "notify": true,
  "refund_line_items": Immutable.List [
    Immutable.Map {
      "line_item_id": 4193100136471,
      "restock_type": "no_restock",
      "location_id": null,
      "quantity": 1,
    },
  ],
  "shipping": Immutable.Map {
    "amount": "0.00",
  },
}
`;

exports[`getFinalRefundOrderPayload() should return final refund order payload 1`] = `
Immutable.Map {
  "currency": "USD",
  "transactions": Immutable.List [
    Immutable.Map {
      "order_id": 1894175539223,
      "kind": "refund",
      "gateway": "manual",
      "parent_id": 2521452118039,
      "amount": "1.00",
      "currency": "USD",
      "maximum_refundable": "1.20",
    },
  ],
  "notify": true,
  "refund_line_items": Immutable.List [
    Immutable.Map {
      "line_item_id": 4193100136471,
      "restock_type": "cancel",
      "location_id": 123,
      "quantity": 1,
    },
  ],
  "shipping": Immutable.Map {
    "amount": "0.00",
  },
}
`;

exports[`getLineItemQuantity() should return adjusted quantity because there is a refund 1`] = `0`;

exports[`getLineItemQuantity() should return original quantity because there is no refund 1`] = `1`;

exports[`initCancelOrderLineItems() should return line items used to render the cancel order modal 1`] = `
Immutable.List [
  Immutable.Map {
    "quantity": 1,
    "product_id": 8345093387,
    "price_set": Immutable.Map {
      "shop_money": Immutable.Map {
        "amount": "1.0",
        "currency_code": "USD",
      },
      "presentment_money": Immutable.Map {
        "amount": "1.0",
        "currency_code": "USD",
      },
    },
    "variant_id": 31128766316567,
    "title": "Acidulous candy",
    "id": 4193100136471,
    "sku": "0987654321-1",
    "variant_title": "Red / A",
    "total_discount_set": Immutable.Map {
      "shop_money": Immutable.Map {
        "amount": "0.0",
        "currency_code": "USD",
      },
      "presentment_money": Immutable.Map {
        "amount": "0.0",
        "currency_code": "USD",
      },
    },
  },
  Immutable.Map {
    "quantity": 4,
    "product_id": 8345093387,
    "price_set": Immutable.Map {
      "shop_money": Immutable.Map {
        "amount": "1.0",
        "currency_code": "USD",
      },
      "presentment_money": Immutable.Map {
        "amount": "1.0",
        "currency_code": "USD",
      },
    },
    "variant_id": 31128766349335,
    "title": "Acidulous candy",
    "id": 4193100169239,
    "sku": "0987654321-2",
    "variant_title": "Red / B",
    "total_discount_set": Immutable.Map {
      "shop_money": Immutable.Map {
        "amount": "0.0",
        "currency_code": "USD",
      },
      "presentment_money": Immutable.Map {
        "amount": "0.0",
        "currency_code": "USD",
      },
    },
  },
]
`;

exports[`initCancelOrderLineItems() should return line items used to render the cancel order modal for multi-currency order 1`] = `
Immutable.List [
  Immutable.Map {
    "quantity": 1,
    "product_id": 4624387440779,
    "price_set": Immutable.Map {
      "shop_money": Immutable.Map {
        "amount": "96377",
        "currency_code": "JPY",
      },
      "presentment_money": Immutable.Map {
        "amount": "898.10",
        "currency_code": "USD",
      },
    },
    "variant_id": 32685678362763,
    "title": "Smartphone",
    "id": 4692703838347,
    "sku": "",
    "variant_title": "",
    "total_discount_set": Immutable.Map {
      "shop_money": Immutable.Map {
        "amount": "0",
        "currency_code": "JPY",
      },
      "presentment_money": Immutable.Map {
        "amount": "0.00",
        "currency_code": "USD",
      },
    },
  },
]
`;

exports[`initCancelOrderPayload() should return cancel order payload 1`] = `
Immutable.Map {
  "reason": "customer",
  "email": true,
  "refund": Immutable.Map {
    "currency": "USD",
    "restock": false,
    "notify": false,
    "refund_line_items": Immutable.List [
      Immutable.Map {
        "line_item_id": 4193100136471,
        "fulfillment_status": null,
        "restock_type": "cancel",
        "quantity": 1,
      },
      Immutable.Map {
        "line_item_id": 4193100169239,
        "fulfillment_status": null,
        "restock_type": "cancel",
        "quantity": 4,
      },
    ],
    "shipping": Immutable.Map {
      "amount": "0.00",
    },
    "transactions": Immutable.List [
      Immutable.Map {
        "amount": "",
      },
    ],
  },
}
`;
